--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,26 @@
 {
   "version": 2,
   "builds": [
-    { "src": "bot.py", "use": "@vercel/python" }
+    {
+      "src": "bot.py",
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "50mb"  // Ajusta esto si es necesario
+      }
+    }
   ],
   "routes": [
-    { "src": "/webhook", "dest": "bot.py", "headers": { "Cache-Control": "no-store" } },
-    { "src": "/set-webhook", "dest": "bot.py", "headers": { "Cache-Control": "no-store" } },
-    { "src": "/get-webhook-info", "dest": "bot.py", "headers": { "Cache-Control": "no-store" } }
+    {
+      "src": "/webhook",
+      "dest": "bot.py"
+    },
+    {
+      "src": "/set-webhook",
+      "dest": "bot.py"
+    },
+    {
+      "src": "/get-webhook-info",
+      "dest": "bot.py"
+    }
   ]
 }
