--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,3 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "bot.py",
-      "use": "@vercel/python",
-      "config": {
-        "maxLambdaSize": "10mb"
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/webhook",
-      "dest": "bot.py"
-    },
-    {
-      "src": "/set-webhook",
-      "dest": "bot.py"
-    },
-    {
-      "src": "/get-webhook-info",
-      "dest": "bot.py"
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/api/index" }]
 }
