--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
-  "version": 2,
   "builds": [
-    { "src": "bot.py", "use": "@vercel/python" }
+    { "src": "main.py", "use": "@vercel/python" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "bot.py" }
+    { "src": "/(.*)", "dest": "main.py" }
   ]
 }
