Actualizar vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,6 @@
   },
   "routes": [],
   "env": {
-    "TOKEN": "YOUR_API_TOKEN"
+    "TOKEN": "7265797972:AAHu3Jl7CXVfXVH87lsc_3TySYq6Itf7lUo"
   }
 }
