--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-# requirements.txt
-python-telegram-bot==20.7
-python-dotenv==1.0.0
+Pyrogram
+TgCrypto
+Quart
+google-auth
+google-auth-oauthlib
+google-api-python-client
+aiofiles
